[gd_scene load_steps=82 format=2]

[ext_resource path="res://Graphics/Game.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Player.png" type="Texture" id=2]
[ext_resource path="res://PlayerSprite.gd" type="Script" id=3]
[ext_resource path="res://PlayerSpriteStand.gd" type="Script" id=4]
[ext_resource path="res://Graphics/PlayerStand.png" type="Texture" id=5]
[ext_resource path="res://Player.gd" type="Script" id=6]
[ext_resource path="res://Fonts/PermanentMarker-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Timer.gd" type="Script" id=8]
[ext_resource path="res://Graphics/StartScreen.png" type="Texture" id=9]
[ext_resource path="res://Game.gd" type="Script" id=10]
[ext_resource path="res://Graphics/Background2.png" type="Texture" id=11]
[ext_resource path="res://Background.gd" type="Script" id=12]
[ext_resource path="res://RockSpawner.gd" type="Script" id=13]
[ext_resource path="res://Graphics/Rock00.png" type="Texture" id=14]
[ext_resource path="res://Rock.gd" type="Script" id=15]
[ext_resource path="res://Apple.gd" type="Script" id=16]
[ext_resource path="res://Graphics/Apple.png" type="Texture" id=17]
[ext_resource path="res://Graphics/Overgrown.png" type="Texture" id=18]
[ext_resource path="res://HitCount.gd" type="Script" id=19]
[ext_resource path="res://Bullet.gd" type="Script" id=20]
[ext_resource path="res://Antirock.gd" type="Script" id=21]
[ext_resource path="res://PainTrain.gd" type="Script" id=22]
[ext_resource path="res://Graphics/Background3.png" type="Texture" id=23]
[ext_resource path="res://Graphics/Background1.png" type="Texture" id=24]
[ext_resource path="res://Graphics/Background5.png" type="Texture" id=25]
[ext_resource path="res://Graphics/Background4.png" type="Texture" id=26]
[ext_resource path="res://Graphics/Background6.png" type="Texture" id=27]
[ext_resource path="res://Graphics/Background7.png" type="Texture" id=28]
[ext_resource path="res://Graphics/Background10.png" type="Texture" id=29]
[ext_resource path="res://Graphics/Background9.png" type="Texture" id=30]
[ext_resource path="res://Graphics/Background8.png" type="Texture" id=31]
[ext_resource path="res://Graphics/Background11.png" type="Texture" id=32]
[ext_resource path="res://Graphics/Background12.png" type="Texture" id=33]
[ext_resource path="res://Graphics/Background14.png" type="Texture" id=34]
[ext_resource path="res://Graphics/Background13.png" type="Texture" id=35]
[ext_resource path="res://Graphics/Background16.png" type="Texture" id=36]
[ext_resource path="res://Graphics/Background15.png" type="Texture" id=37]
[ext_resource path="res://Graphics/Background18.png" type="Texture" id=38]
[ext_resource path="res://Graphics/Background17.png" type="Texture" id=39]
[ext_resource path="res://Graphics/Rock3.png" type="Texture" id=40]
[ext_resource path="res://Graphics/Rock12.png" type="Texture" id=41]
[ext_resource path="res://Graphics/Rock13.png" type="Texture" id=42]
[ext_resource path="res://Graphics/Rock15.png" type="Texture" id=43]
[ext_resource path="res://Graphics/Rock10.png" type="Texture" id=44]
[ext_resource path="res://Graphics/Rock11.png" type="Texture" id=45]
[ext_resource path="res://Graphics/Antirock.png" type="Texture" id=46]
[ext_resource path="res://Graphics/Rock14.png" type="Texture" id=47]
[ext_resource path="res://Graphics/Rock5.png" type="Texture" id=48]
[ext_resource path="res://Graphics/Rock9.png" type="Texture" id=49]
[ext_resource path="res://Graphics/Rock6.png" type="Texture" id=50]
[ext_resource path="res://Graphics/Rock7.png" type="Texture" id=51]
[ext_resource path="res://Graphics/Explosion.png" type="Texture" id=52]
[ext_resource path="res://Graphics/Rock4.png" type="Texture" id=53]
[ext_resource path="res://Graphics/Rock2.png" type="Texture" id=54]
[ext_resource path="res://Graphics/Rock8.png" type="Texture" id=55]
[ext_resource path="res://Graphics/Train.png" type="Texture" id=56]
[ext_resource path="res://Graphics/Gun.png" type="Texture" id=57]
[ext_resource path="res://Graphics/Bullet.png" type="Texture" id=58]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 57 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 58 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 35
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=11]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=12]
size = 63
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Start",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "Background11",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "Background8",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "Background4",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "Background6",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Background2",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "Background3",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "Background7",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "Background1",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "Background5",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ) ],
"loop": true,
"name": "Background17",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "Background10",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "Background16",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "Background14",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "Background9",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "Background12",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "Background15",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "Background18",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "Background13",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 20, 10 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "12",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ) ],
"loop": true,
"name": "13",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "14",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ) ],
"loop": true,
"name": "11",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": true,
"name": "10",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ) ],
"loop": true,
"name": "9",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ) ],
"loop": true,
"name": "8",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ) ],
"loop": true,
"name": "15",
"speed": 5.0
}, {
"frames": [ ExtResource( 51 ) ],
"loop": true,
"name": "7",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "16",
"speed": 5.0
}, {
"frames": [ ExtResource( 53 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 54 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 50 ) ],
"loop": true,
"name": "6",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=17]
radius = 20.0

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=19]

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ ExtResource( 46 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 52 ) ],
"loop": true,
"name": "Explode",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=21]
size = 63
font_data = ExtResource( 7 )

[sub_resource type="CapsuleShape2D" id=24]
radius = 350.0
height = 500.0

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ ExtResource( 56 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="Area2D" parent="."]
position = Vector2( 482.55, 308.681 )
z_index = -3
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerColl" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerSpriteStand" type="AnimatedSprite" parent="Player"]
z_index = -1
frames = SubResource( 3 )
offset = Vector2( 0, -16 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerClone" type="Area2D" parent="Player"]
visible = false
position = Vector2( 80, 0 )

[node name="PlayerColl" type="CollisionShape2D" parent="Player/PlayerClone"]
shape = SubResource( 4 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerSprite" type="AnimatedSprite" parent="Player/PlayerClone"]
frames = SubResource( 2 )
script = ExtResource( 3 )

[node name="PlayerSpriteStand" type="AnimatedSprite" parent="Player/PlayerClone"]
z_index = -1
frames = SubResource( 3 )
offset = Vector2( 0, -16 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="Player/PlayerClone"]
one_shot = true

[node name="OvergrownSprite" type="AnimatedSprite" parent="Player"]
visible = false
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 5 )

[node name="GunSprite" type="AnimatedSprite" parent="Player"]
visible = false
position = Vector2( 13.0815, -17.6777 )
scale = Vector2( 0.416637, 0.416637 )
frames = SubResource( 6 )

[node name="Bullet" type="Area2D" parent="Player"]
position = Vector2( -1261.09, 538.492 )
script = ExtResource( 20 )

[node name="BulletColl" type="CollisionShape2D" parent="Player/Bullet"]
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player/Bullet"]
position = Vector2( -0.176819, 0 )
scale = Vector2( 0.319409, 0.310571 )
frames = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="GameSprite" type="AnimatedSprite" parent="."]
position = Vector2( 512, 300 )
frames = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="GameTheme" type="RichTextLabel" parent="."]
margin_left = 47.0
margin_top = 156.0
margin_right = 338.0
margin_bottom = 279.0
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 0.992157, 1, 0, 1 )
text = "Every 10 seconds"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GameDesc" type="RichTextLabel" parent="."]
margin_left = 51.0
margin_top = 275.0
margin_right = 338.0
margin_bottom = 364.0
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 1, 0.996078, 0, 1 )
text = "Every 10 seconds something is going to happen?"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 180.0
one_shot = true
script = ExtResource( 8 )

[node name="TimerText" type="RichTextLabel" parent="Timer"]
margin_left = 38.9243
margin_top = 450.708
margin_right = 204.924
margin_bottom = 542.708
custom_fonts/normal_font = SubResource( 12 )
custom_colors/default_color = Color( 1, 0.964706, 0, 1 )
text = "0:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" type="AnimatedSprite" parent="."]
position = Vector2( 682.953, 309.767 )
scale = Vector2( 0.958461, 0.81636 )
z_index = -1
frames = SubResource( 13 )
animation = "Start"
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="AnimatedSprite" parent="."]
position = Vector2( 980, 301.947 )
scale = Vector2( 1.5, 1.313 )
z_index = -10
frames = SubResource( 14 )
animation = "Background17"
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="RockSpawner" type="Node2D" parent="."]
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rock" type="Area2D" parent="RockSpawner"]
position = Vector2( 1566.61, -296.635 )
script = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="RockColl" type="CollisionShape2D" parent="RockSpawner/Rock"]
position = Vector2( 2.00226, -21.3574 )
shape = SubResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="RockSprite" type="AnimatedSprite" parent="RockSpawner/Rock"]
position = Vector2( 2.03102, -31.2569 )
z_index = -4
frames = SubResource( 16 )
animation = "16"
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="RockSpawner/Rock"]
wait_time = 0.75
one_shot = true

[node name="RockTimer" type="Timer" parent="RockSpawner"]
wait_time = 0.25
autostart = true

[node name="Apple" type="Area2D" parent="RockSpawner"]
position = Vector2( 1081.81, -70.3479 )
z_index = -1
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RockSpawner/Apple"]
shape = SubResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="RockSpawner/Apple"]
z_index = -4
frames = SubResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="Antirock" type="Area2D" parent="RockSpawner"]
position = Vector2( 27.4226, 1339.6 )
script = ExtResource( 21 )

[node name="ARockColl" type="CollisionShape2D" parent="RockSpawner/Antirock"]
position = Vector2( 2.00226, -21.3574 )
shape = SubResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="ARockSprite" type="AnimatedSprite" parent="RockSpawner/Antirock"]
position = Vector2( 2.03102, -31.2569 )
z_index = -4
frames = SubResource( 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="RockSpawner/Antirock"]
wait_time = 0.5
one_shot = true

[node name="EventTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="HitCount" type="RichTextLabel" parent="."]
margin_left = 219.0
margin_top = 447.0
margin_right = 367.0
margin_bottom = 539.0
custom_fonts/normal_font = SubResource( 21 )
custom_colors/default_color = Color( 0.988235, 1, 0, 1 )
script = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PainTrain" type="Area2D" parent="."]
position = Vector2( 1030.92, 332.065 )
z_index = -1
script = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}

[node name="TrainColl" type="CollisionShape2D" parent="PainTrain"]
position = Vector2( 349.311, 272.943 )
shape = SubResource( 24 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="PainTrain"]
position = Vector2( 370.903, -31.7893 )
scale = Vector2( 1.30256, 1.30701 )
frames = SubResource( 23 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="area_entered" from="Player/PlayerClone" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Player/PlayerClone/Timer" to="Player" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Player/Bullet" to="Player/Bullet" method="_on_Bullet_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="RockSpawner/Rock" to="RockSpawner/Rock" method="_on_Rock_area_entered"]
[connection signal="timeout" from="RockSpawner/Rock/Timer" to="RockSpawner/Rock" method="_on_Timer_timeout"]
[connection signal="timeout" from="RockSpawner/RockTimer" to="RockSpawner" method="_on_RockTimer_timeout"]
[connection signal="AppleDied" from="RockSpawner/Apple" to="." method="_on_Apple_AppleDied"]
[connection signal="area_entered" from="RockSpawner/Apple" to="RockSpawner/Apple" method="_on_Apple_area_entered"]
[connection signal="area_entered" from="RockSpawner/Antirock" to="RockSpawner/Antirock" method="_on_Antirock_area_entered"]
[connection signal="timeout" from="RockSpawner/Antirock/Timer" to="RockSpawner/Antirock" method="_on_Timer_timeout"]
[connection signal="timeout" from="EventTimer" to="." method="_on_EventTimer_timeout"]
[connection signal="_on_Timer_Timeout" from="PainTrain" to="." method="_on_PainTrain__on_Timer_Timeout"]
[connection signal="area_entered" from="PainTrain" to="PainTrain" method="_on_PainTrain_area_entered"]
